[package]
name = "mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version =  "0.14.2" }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:rust 1.78-nightly-x86_6rust 1.78-nightly-x86_64-pc-windows-gnu4-pc-windows-gnu
[profile.dev.package."*"]
opt-level = 3
